# VocalForge

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
JuceLibraryCode/: JucePluginDefines.h
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
